Fix: Added a gap for the dropdowns

--- a/src/components/filterBar/FilterBarV2.scss
+++ b/src/components/filterBar/FilterBarV2.scss
@@ -11,6 +11,7 @@
 		border-bottom: 1px solid theme-var($greyLineColor);
 		.filterDropdownArea {
 			display: flex;
+			gap: 25px;
 			.destinationFilterDropdown {
 				width: clamp(200px, 40%, 390px);
 
